use new ria-suite plugin